--- a/package.json
+++ b/package.json
@@ -38,12 +38,15 @@
     "babel-jest": "23.6.0",
     "babel-plugin-dynamic-import-node": "2.3.3",
     "chalk": "2.4.2",
+    "commitizen": "^4.2.4",
     "connect": "3.6.6",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "6.7.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "6.2.2",
     "html-webpack-plugin": "3.2.0",
+    "husky": "^7.0.0",
     "mockjs": "1.0.1-beta3",
     "prettier": "^2.6.1",
     "runjs": "4.3.2",
@@ -53,8 +56,7 @@
     "serve-static": "1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.2",
-    "vue-template-compiler": "2.6.10",
-    "husky": "^7.0.0"
+    "vue-template-compiler": "2.6.10"
   },
   "browserslist": [
     "> 1%",
@@ -64,5 +66,10 @@
     "node": ">=8.9",
     "npm": ">= 3.0.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
