--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,7 @@
   "printWidth": 80,
   "singleQuote": true,
   "trailingComma": "none",
-  "semi": false,
+  "semi": true,
   "arrowParens": "always",
   "endOfLine": "lf",
   "proseWrap": "never",
