--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "vuex": "3.1.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
     "@vue/cli-plugin-babel": "4.4.4",
     "@vue/cli-plugin-eslint": "4.4.4",
     "@vue/cli-plugin-unit-jest": "4.4.4",
@@ -47,6 +49,7 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-vue": "6.2.2",
     "html-webpack-plugin": "3.2.0",
+    "husky": "^7.0.0",
     "mockjs": "1.0.1-beta3",
     "prettier": "^2.6.1",
     "runjs": "4.3.2",
@@ -56,8 +59,7 @@
     "serve-static": "1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.2",
-    "vue-template-compiler": "2.6.10",
-    "husky": "^7.0.0"
+    "vue-template-compiler": "2.6.10"
   },
   "browserslist": [
     "> 1%",
